Bug 997026 - Part 1: Fix clang -Wunused-const-variable warnings in xpcom. r=froydnj